--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/detdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/detdrobe.yml
@@ -17,3 +17,6 @@
     ClothingHeadsetSecurity: 2
   contrabandInventory:
     ToyFigurineDetective: 1
+  emaggedInventory: #klovn
+    CameraBug: 1
+    SpeedLoaderMagnumAP: 2
