--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
@@ -27,3 +27,8 @@
     FoodDonutHomer: 12
     FoodBoxDonut: 2
     #box evidence
+  emaggedInventory: #Klovn
+    ExGrenade: 1
+    EmpGrenade: 1
+    SmokeGrenade: 3 #more for sec
+    WeaponPistolViper: 1 #if you let a tot steal a secvend this is your fault
