--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sovietsoda.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sovietsoda.yml
@@ -7,4 +7,6 @@
     DrinkColaCan: 10
     ClothingHeadHatUshanka: 2
   emaggedInventory:
+    WeaponSniperMosin: 3
     MagazineBoxLightRifle: 1
+    ClothingHeadHatUshanka: 3
