--- a/Resources/Prototypes/Roles/Antags/revolutionary.yml
+++ b/Resources/Prototypes/Roles/Antags/revolutionary.yml
@@ -1,3 +1,11 @@
+# SPDX-FileCopyrightText: 2023 coolmankid12345
+# SPDX-FileCopyrightText: 2024 Leon Friedrich
+# SPDX-FileCopyrightText: 2024 Mr. 27
+# SPDX-FileCopyrightText: 2025 DeusMaldPr
+# SPDX-FileCopyrightText: 2025 ScarKy0
+#
+# SPDX-License-Identifier: MPL-2.0
+
 - type: antag
   id: HeadRev
   name: roles-antag-rev-head-name
@@ -6,8 +14,9 @@
   objective: roles-antag-rev-head-objective
   guides: [ Revolutionaries ]
   requirements:
-  - !type:OverallPlaytimeRequirement
-    time: 3600 # 1h
+  - !type:DepartmentTimeRequirement
+    department: Security
+    time: 3600 #1 hrs, klovn
 
 - type: antag
   id: Rev
